crates/toml/tests/snapshots/invalid/string/bad-escape-03.stderr
TOML parse error at line 1, column 15
  |
1 | backslash = "\"
  |               ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
